fixed spacing banner dogs index

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,7 @@
     background: white;
     box-shadow: 0 0 18px rgba(0,0,0,0.2);
     padding-bottom: 5;
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 16px;
     height: 398px;
     position: relative;
